fix: the graphs are now visible after llm response

--- a/src/App.css
+++ b/src/App.css
@@ -23,12 +23,10 @@ h1, h2, h3, h4, h5, h6 {
   font-style: normal;
 }
 #upload-form {
-  display: flex;
   flex-direction: column;
   width: fit-content;
   margin: auto;
   padding: 24px;
-  background-color: var(--light);
   gap: 24px;
   align-items: center;
 }
@@ -89,8 +87,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .loading {
-  display: grid;
-  place-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin: auto;
   height: 100dvh;
   p {
